# libero_mail_scanner

./: .gitignore  0104_account.txt  0104_proxy.txt  0104_proxy_2.txt  0104_proxy_3.txt  README.md  check_loops.py  clean_comments.py  key.txt  log.txt  log_backend.txt  parse_mitm.py  test.txt
backend/: KBG48428.txt  SAR97653.txt  TEN98338.txt  auth.py  data.db  database.py  debug_ocr.py  main.py  new.txt  pyproject.toml  setup_gpu.sh  test.txt  test_imap_tools.py  test_parser.py
backend/attachments/nanomalefico76/: manifest.csv
backend/core/: captcha_solver.py  classifier.py  config.py  imap_client.py  proxy_pool.py  scanner.py  state.py  web_client.py  worker.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Admin.jsx  Dashboard.jsx  Login.jsx
