[project]
name = "libero-mail-backend"
version = "2.0.0"
description = "Libero Mail Scanner - FastAPI Backend"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.4.0",
    "pysocks>=1.7.1",
    "rapidocr-onnxruntime>=1.4.4",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.11.0",
    "pymupdf>=1.24.0",
    "pillow>=12.1.1",
    "tqdm>=4.67.3",
    "pyzbar>=0.1.9",
    "uniface>=1.1.0",
]

[dependency-groups]
dev = []
